--- a/frontend/trello-gui/package.json
+++ b/frontend/trello-gui/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.1",
     "react-use": "^17.6.0",
     "sass": "^1.88.0",
