--- a/frontend/trello-gui/package.json
+++ b/frontend/trello-gui/package.json
@@ -7,6 +7,8 @@
     "@dnd-kit/modifiers": "^6.0.1",
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -17,6 +19,7 @@
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.5.1",
     "classnames": "^2.5.1",
+    "material-ui-confirm": "^3.0.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
