hoàn thành api xóa column và cả card bên trong nó
giao diện hiển thị bằng thư viện ConfirmProvider , sửa lại menudropdown bị nháy do click ở column bằng cách hiển thị thẻ overlay khi click button dropdown tức là ko vừa hiển thị menudropdown vừa kéo dc , ...

--- a/backend/trello-api/src/main/resources/application.yaml
+++ b/backend/trello-api/src/main/resources/application.yaml
@@ -11,4 +11,4 @@ server:
 
 app:
   cors:
-    whitelist: http://localhost:3000, http://localhost:3001
+    whitelist: http://localhost:3000, http://localhost:3001 , http://localhost:3002
