--- a/backend/trello-api/src/main/resources/application.yaml
+++ b/backend/trello-api/src/main/resources/application.yaml
@@ -11,4 +11,4 @@ server:
 
 app:
   cors:
-    whitelist: http://localhost:3000, http://localhost:3001 , http://localhost:3002
+    whitelist: https://trello-web-plum.vercel.app
