--- a/frontend/trello-gui/package.json
+++ b/frontend/trello-gui/package.json
@@ -31,11 +31,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
-  },
+  "start": "cross-env REACT_APP_API_URL=http://localhost:8017 react-app-rewired start",
+  "build": "cross-env REACT_APP_API_URL=https://trello-api.onrender.com react-app-rewired build",
+  "test": "react-app-rewired test",
+  "eject": "react-app-rewired eject"
+}
+,
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -56,6 +57,7 @@
   },
   "devDependencies": {
     "babel-plugin-module-resolver": "^5.0.2",
+    "cross-env": "^10.0.0",
     "customize-cra": "^1.0.0",
     "prettier": "^3.5.3",
     "react-app-rewired": "^2.2.1"
