--- a/frontend/trello-gui/package.json
+++ b/frontend/trello-gui/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@reduxjs/toolkit": "^2.9.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -22,6 +23,9 @@
     "material-ui-confirm": "^3.0.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.49.3",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.1",
@@ -31,12 +35,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-  "start": "cross-env REACT_APP_API_URL=http://localhost:8017 react-app-rewired start",
-  "build": "cross-env REACT_APP_API_URL=https://trello-api-2-r6pt.onrender.com react-app-rewired build",
-  "test": "react-app-rewired test",
-  "eject": "react-app-rewired eject"
-}
-,
+    "start": "cross-env REACT_APP_API_URL=http://localhost:8017 react-app-rewired start",
+    "build": "cross-env REACT_APP_API_URL=https://trello-api-2-r6pt.onrender.com react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
