Khởi tạo và áp dụng Axios Interceptors, viết API Register User , fix bug spam click ở frontend
Hiểu được Interceptors trong Axios là gì? Tại sao nó lại quan trọng? Học cách Custom Axios Instance cho dự án thực tế.
👉 Viết API đăng ký người dùng vào hệ thống, triển khai Model User theo Schema, sử dụng Bcryptjs để Hash Password, tạo Random Verify Token bằng uuid để người dùng xác thực tài khoản qua email,…vv

--- a/backend/trello-api/src/main/resources/application.yaml
+++ b/backend/trello-api/src/main/resources/application.yaml
@@ -11,4 +11,4 @@ server:
 
 app:
   cors:
-    whitelist: https://trello-web-plum.vercel.app
+    whitelist: https://trello-web-plum.vercel.app , http://localhost:3000
