--- a/backend/trello-api/pom.xml
+++ b/backend/trello-api/pom.xml
@@ -82,6 +82,10 @@
             <version>3.0.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+        </dependency>
     </dependencies>
 
     <!--    phải viết theo code build bên dưới
