--- a/backend/trello-api/src/main/resources/application.yaml
+++ b/backend/trello-api/src/main/resources/application.yaml
@@ -4,11 +4,32 @@ spring:
 
   data:
     mongodb:
-      uri: mongodb+srv://coladz2812:jJdl6I8vBAQyOrN9@cola.parrxmg.mongodb.net/trello-coladeptrai?retryWrites=true&w=majority&appName=CoLa
+      uri: ${MONGO_URI}  # đọc từ biến môi trường
+
+mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${GMAIL_USER}
+    password: ${GMAIL_APP_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
 
 server:
   port: 8017
 
 app:
   cors:
-    whitelist: https://trello-web-plum.vercel.app , http://localhost:3000
+    whitelist: https://trello-web-plum.vercel.app, http://localhost:3000
+
+brevo:
+  api:
+    key: ${BREVO_API_KEY}
+  email:
+    name: ${BREVO_EMAIL}
+    senderName: Trello Advance MERN Stack
+
