viết api VerifyAccount ,  Viết API Login – Đăng nhập , áp dụng JWT trả về sau khi đăng nhập thành công
👉 Hoàn thiện API Verify người dùng, tích hợp khi người dùng click link xác thực từ Email đi ra.
👉 Viết API Login – Đăng nhập, kiểm tra Password với Bcryptjs, xử lý JWT (jsonwebtoken) để áp dụng cơ chế AccessToken và RefreshToken tự động…vv

--- a/backend/trello-api/pom.xml
+++ b/backend/trello-api/pom.xml
@@ -100,6 +100,12 @@
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
 
+        <!-- Jwt        -->
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>9.30.1</version>
+        </dependency>
     </dependencies>
 
     <!--    phải viết theo code build bên dưới
