--- a/backend/trello-api/src/main/resources/application.yaml
+++ b/backend/trello-api/src/main/resources/application.yaml
@@ -34,6 +34,7 @@ brevo:
     senderName: Trello Advance MERN Stack
 
 jwt :
-  signerKey : ${SIGNER_KEY}
-  valid-duration : 200 # in second thơig gian có hiệu lực cùa token
-  refreshable-duration : 360 #in second thời gian có thể làm mới token
+  signerKeyAccess : ${SIGNER_KEY_ACCESS}
+  signerKeyRefresh : ${SIGNER_KEY_REFRESH}
+  valid-duration : 20 # in second thơig gian có hiệu lực cùa token
+  refreshable-duration : 60 #in second thời gian có thể làm mới token
