viết xong API Upload Avatar , làm frontend trang boards , tính năng phân trang
 Hoàn thiện phần Update Avatar cho người dùng, học cách upload file lên Cloud Storage, cụ thể là Cloudinary rồi lưu Secure URL của file về Database.
👉 Chuẩn bị phần Component trang danh sách Board theo Design…vv
👉 Rất nhiều kiến thức từ việc Validate dữ liệu File, Upload File…vv

--- a/backend/trello-api/pom.xml
+++ b/backend/trello-api/pom.xml
@@ -113,7 +113,25 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.cloudinary/cloudinary-http44 -->
+        <!--     cloudinary -->
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.39.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <!--   commons-io : Thư viện này giúp xử lý file/stream dễ dàng
+        (ví dụ chuyển MultipartFile sang File, đọc/ghi file…)   -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.19.0</version>
+        </dependency>
     </dependencies>
+
 
     <!--    phải viết theo code build bên dưới
     <build>
