--- a/backend/trello-api/src/main/resources/application.yaml
+++ b/backend/trello-api/src/main/resources/application.yaml
@@ -38,3 +38,8 @@ jwt :
   signerKeyRefresh : ${SIGNER_KEY_REFRESH}
   valid-duration : 3600 # in second thơig gian có hiệu lực cùa token
   refreshable-duration : 7200 #in second thời gian có thể làm mới token
+
+cloudinary :
+  cloudName : ${CLOUDINARY_CLOUD_NAME}
+  cloudApiKey : ${CLOUDINARY_API_KEY}
+  cloudApiSecret : ${CLOUDINARY_API_SECRET}
