--- a/frontend/trello-gui/package.json
+++ b/frontend/trello-gui/package.json
@@ -18,9 +18,11 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@tippyjs/react": "^4.2.6",
+    "@uiw/react-md-editor": "^4.0.8",
     "axios": "^1.5.1",
     "classnames": "^2.5.1",
     "material-ui-confirm": "^3.0.9",
+    "moment": "^2.30.1",
     "randomcolor": "^0.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -32,6 +34,7 @@
     "react-tooltip": "^5.28.1",
     "react-use": "^17.6.0",
     "redux-persist": "^6.0.0",
+    "rehype-sanitize": "^6.0.0",
     "sass": "^1.88.0",
     "tippy.js": "^6.3.7",
     "web-vitals": "^2.1.4"
