--- a/backend/trello-api/pom.xml
+++ b/backend/trello-api/pom.xml
@@ -130,6 +130,14 @@
             <artifactId>commons-io</artifactId>
             <version>2.19.0</version>
         </dependency>
+
+        <!-- spring websocket + messaging -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
+
     </dependencies>
 
 
