--- a/frontend/trello-gui/package.json
+++ b/frontend/trello-gui/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.9.0",
+    "@stomp/stompjs": "^7.2.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -36,6 +37,8 @@
     "redux-persist": "^6.0.0",
     "rehype-sanitize": "^6.0.0",
     "sass": "^1.88.0",
+    "socket.io-client": "^4.8.1",
+    "sockjs-client": "^1.6.1",
     "tippy.js": "^6.3.7",
     "web-vitals": "^2.1.4"
   },
